fix: toList() 대신 collection 이용
Java 17 버전에 따른 수정